--- a/Tutorial4_Python.ipynb
+++ b/Tutorial4_Python.ipynb
@@ -8,13 +8,14 @@
     "\n",
     "\n",
     "## 1.  Import Data\n",
-    "1. Import the pandas python module and name it `pd`\n",
-    "2. Load the excel sheet \"Data\" from excel file \"data.xlsx\" into a data frame called `data`.\n",
+    "\n",
+    "1. Import the `pandas` python module and name it `pd`\n",
+    "2. Load the Excel sheet \"Data\" from Excel file \"data.xlsx\" into a dataframe called `data`.\n",
     "3. Display the number of rows and columns in `data`.\n",
-    "4. Display the fist 10 rows at the top (head) of the `data` table.\n",
-    "5. Load the excel sheet \"Peak\" from excel file \"data.xlsx\" into a data frame called `peak`.\n",
+    "4. Display the first 10 rows at the top (head) of the `data` table.\n",
+    "5. Load the Excel sheet \"Peak\" from Excel file \"data.xlsx\" into a dataframe called `peak`.\n",
     "6. Display the number of rows and columns in `peak`.\n",
-    "7. Display the fist 10 rows at the top (head) of the `peak` table.\n"
+    "7. Display the first 10 rows at the top (head) of the `peak` table.\n"
    ]
   },
   {
@@ -540,12 +541,13 @@
    "metadata": {},
    "source": [
     "\n",
-    "## 2. Histagram of RSD\n",
-    "1. Import the matplotlib.pyplot visualisation package and name it `plt`\n",
-    "2. Invoke special command to help simplifiy plotting - `%matplotlib inline`\n",
+    "## 2. Histogram of RSD\n",
+    "\n",
+    "1. Import the `matplotlib.pyplot` visualisation package and name it `plt`\n",
+    "2. Invoke the special \"Jupyter Magic\" command `%matplotlib inline` to help simplify plotting\n",
     "2. Create a histogram of the column `peak.RSD`\n",
-    "3. Label the figure\n",
-    "4. output the final figure using the function `plt.show()`"
+    "3. Add an x-axis label \"RSD\" to the figure\n",
+    "4. Generate the figure using the function `plt.show()`"
    ]
   },
   {
@@ -580,7 +582,8 @@
    "metadata": {},
    "source": [
     "## 3. Jointplot of RSD vs. D-Ratio\n",
-    "1. Import the seaborn visualisation package and name it `sns`\n",
+    "\n",
+    "1. Import the `seaborn` visualisation package and name it `sns`\n",
     "2. Create a plot of `peak` columns `peak.RSD` vs. `peak.D-Ratio` with bivariate and distribution graphs. (automatically displayed)"
    ]
   },
@@ -624,9 +627,13 @@
    "source": [
     "\n",
     "## 4. PCA score plot of QC vs. Sample\n",
-    "1. Import the packages required to calculate the principal component analysis (PCA).\n",
-    "2. Import the matplotlib packages required to plot the PCA scores\n",
-    "3. Scaled the data and calculate the PCA.\n",
+    "\n",
+    "1. Import the packages required to calculate the principal component analysis (PCA)\n",
+    "    - `numpy` (import as `np`)\n",
+    "    - `scikit-learn` packages `sklearn.decomposition.PCA`, `sklearn.preprocessing.StandardScaler`\n",
+    "2. Import the matplotlib package required to map colours to datapoints, to plot the PCA scores\n",
+    "    - `matplotlib.colors.ListedColormap`\n",
+    "3. Scale the data and calculate the PCA.\n",
     "4. Plot PCA scores (pc1 vs pc2) labeling/coloring samples by 'QC' or 'Sample'"
    ]
   },
@@ -653,7 +660,6 @@
     "import numpy as np\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "import matplotlib.pyplot as plt\n",
     "from matplotlib.colors import ListedColormap\n",
     "\n",
     "# Extract X matrix\n",
@@ -690,11 +696,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 5. Bubble plot of Molecular Weights vs. RT Time (sized by RSD)\n",
-    "1. Import `matplotlib.pyplot` and name it `plt`\n",
-    "2. Create a scatter plot the `peak` columns `peak.Mol_Weight` vs. `peak.RT_minutes`. Each dot = a metabolite peak.\n",
-    "3. Make the size of the dots proportional to the value in column `peak.RSD` - `s=peak.RSD**2/2`\n",
-    "4. make the dots (bubbles) opaque - alpha=0.2"
+    "## 5. Bubble plot of Molecular Weights vs. Retention Time (sized by RSD)\n",
+    "\n",
+    "1. Create a scatterplot of two `peak` columns: `peak.Mol_Weight` vs. `peak.RT_minutes` (each dot is a metabolite peak).\n",
+    "    - make the size of the dots proportional to the RSD of the datapoint with the argument `s=peak.RSD**2/2`\n",
+    "    - make the dots (bubbles) transparent with the argument `alpha=0.2`\n",
+    "2. Add x-axis label \"Molecular Weight\", and y-axis label \"RT minutes\"\n",
+    "3. Add a plot title\n",
+    "4. Render the plot"
    ]
   },
   {
@@ -717,7 +726,6 @@
    ],
    "source": [
     "# Scatterplot of Mol_Weight vs. RT_minute with size RSD^2/2, and colour red\n",
-    "import matplotlib.pyplot as plt\n",
     "fig = plt.figure(figsize=(20,16))\n",
     "plt.scatter(peak.Mol_Weight, peak.RT_minutes, s=peak.RSD**2/2, alpha=0.2, edgecolors='black', c='red') \n",
     "plt.xlabel('Molecular Weight', fontsize=15)\n",
@@ -757,7 +765,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.3"
   },
   "toc": {
    "base_numbering": 1,
